<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sm_primary_light"
    tools:context=".ui.main.LoginActivity">

    <ImageView
        android:id="@+id/logo_img_main"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_imglogin_radius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_img_main">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/login_email_text_Layout"
            android:layout_width="0dp"
            android:hint="@string/login_page_input_email_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            app:startIconDrawable="@drawable/ico_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:id="@+id/login_email_text"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_text_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:hint="@string/login_page_input_password_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_text_Layout"
            app:startIconDrawable="@drawable/ico_lock">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:id="@+id/login_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_txt_bg"
                android:inputType="textPassword"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextViewLabelLink"
            android:id="@+id/login_txt_forget_password"
            android:layout_marginTop="20dp"
            android:text="@string/login_page_txt_forgetpassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_text_layout" />

        <com.google.android.material.button.MaterialButton
            style="@style/BigButtonPrimary"
            android:id="@+id/login_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/login_page_btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt_forget_password"/>

        <TextView
            android:id="@+id/login_txt_before_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_page_txt_before_register"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            style="@style/TextViewLabelLink"
            android:id="@+id/login_txt_register"
            android:layout_marginLeft="5dp"
            android:text="@string/login_page_btn_signup"
            app:layout_constraintLeft_toRightOf="@id/login_txt_before_register"
            app:layout_constraintTop_toTopOf="@id/login_txt_before_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>